force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to buyer Confirmed</fullName>
            </value>
            <value>
                <fullName>Access to buy Unconfirmed</fullName>
            </value>
            <value>
                <fullName>Not Access to buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>