force-app/main/default/objects/Lead/fields/Authority_Score__c.field-meta.xml
<CustomField>
    <fullName>Authority_Score__c</fullName>
    <formula>IF( ISPICKVAL( Authority__c ,&quot;Access to buyer Confirmed&quot; ),3,
IF( ISPICKVAL( Authority__c ,&quot;Access to buy Unconfirmed&quot; ),1,
IF( ISPICKVAL( Authority__c ,&quot;Not Access to buyer&quot;),0,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>