force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget confirmed: Amount Unknown</fullName>
            </value>
            <value>
                <fullName>Budget confirmed :Amount known</fullName>
            </value>
            <value>
                <fullName>Budget Not Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>