force-app/main/default/objects/Lead/fields/Budget_Score__c.field-meta.xml
<CustomField>
    <fullName>Budget_Score__c</fullName>
    <formula>IF(ISPICKVAL(Budget__c,&quot;Budget confirmed :Amount known&quot;),3,
IF(ISPICKVAL(Budget__c,&quot;Budget confirmed: Amount Unknown&quot;),1,
IF(ISPICKVAL(Budget__c,&quot;Budget Not Confirmed&quot;),0,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>