force-app/main/default/objects/Lead/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <formula>IF( Lead_Score__c &lt; 3, IMAGE(&apos;https://java-drive-3436-dev-ed--c.vf.force.com/resource/1662021157000/OneStar?&apos;,&apos;1&apos;),
IF( Lead_Score__c &lt; 5, IMAGE(&apos;https://java-drive-3436-dev-ed--c.vf.force.com/resource/1662021249000/TwoStar?&apos;,&apos;2&apos;),
IF( Lead_Score__c &lt; 7, IMAGE(&apos;https://java-drive-3436-dev-ed--c.vf.force.com/resource/1662021297000/ThreeStar?&apos;,&apos;3&apos;),
IF( Lead_Score__c &lt; 9, IMAGE(&apos;https://java-drive-3436-dev-ed--c.vf.force.com/resource/1662021335000/FourStar?&apos;,&apos;4&apos;),
IMAGE(&apos;https://java-drive-3436-dev-ed--c.vf.force.com/resource/1662021405000/FiveStars?&apos;,&apos;5&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Priority</label>
    <type>Text</type>
</CustomField>