force-app/main/default/objects/Lead/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent Need</fullName>
            </value>
            <value>
                <fullName>Intermediate Need</fullName>
            </value>
            <value>
                <fullName>No urgent Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>