force-app/main/default/objects/Lead/fields/Need_Score__c.field-meta.xml
<CustomField>
    <fullName>Need_Score__c</fullName>
    <formula>IF(ISPICKVAL( Need__c ,&quot;Urgent Need&quot;),3,
IF(ISPICKVAL( Need__c ,&quot;Intermediate Need&quot;),1,
IF(ISPICKVAL( Need__c ,&quot;No urgent Need&quot;),0,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>