force-app/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled identified :Compelling Event</fullName>
            </value>
            <value>
                <fullName>No Scheduled identified :No Compelling Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>