force-app/main/default/objects/Lead/fields/Timeline_Score__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Score__c</fullName>
    <formula>IF(ISPICKVAL( Timeline__c ,&quot;Scheduled identified :Compelling Event&quot;),1,
IF(ISPICKVAL( Timeline__c ,&quot;No Scheduled identified :No Compelling Event&quot;),0,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>