force-app/main/default/objects/Lead/validationRules/PhoneRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneRequired</fullName>
    <active>true</active>
    <description>Phone or Email should be entered</description>
    <errorConditionFormula>AND(ISBLANK( Phone ),ISBLANK(  Email  ))</errorConditionFormula>
    <errorMessage>Please Enter your Phone number or Email</errorMessage>
</ValidationRule>