force-app/main/default/objects/Lead/listViews/Default_queue_lead_assignment_Lead.listView-meta.xml
<ListView>
    <fullName>Default_queue_lead_assignment_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Default queue lead assignment</label>
    <queue>Default_queue_lead_assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>