force-app/main/default/objects/Lead/listViews/Last_6_months_leads.listView-meta.xml
<ListView>
    <fullName>Last_6_months_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>N_MONTHS_AGO:6</value>
    </filters>
    <label>Last 6 months leads</label>
</ListView>