force-app/main/default/objects/Lead/listViews/Lead_Score_and_Priority.listView-meta.xml
<ListView>
    <fullName>Lead_Score_and_Priority</fullName>
    <columns>FULL_NAME</columns>
    <columns>Lead_Priority__c</columns>
    <columns>Lead_Score__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <label>Lead Score and  Priority</label>
</ListView>