force-app/main/default/objects/Lead/listViews/Mumbai_queue_Lead.listView-meta.xml
<ListView>
    <fullName>Mumbai_queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Mumbai queue</label>
    <queue>Mumbai_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>