force-app/main/default/objects/Lead/listViews/Pune_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Pune_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Pune Queue</label>
    <queue>Pune_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>